# gis_utils

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
mcp/: server.py
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/skills/buffer-zones-workflow/: SKILL.md
plugin/skills/dxf-lageplan-extraction/: SKILL.md
plugin/skills/geometry-workflow/: SKILL.md
plugin/skills/gis-safety/: SKILL.md
plugin/skills/layout-from-template/: SKILL.md
plugin/skills/library-extraction/: SKILL.md
plugin/skills/qgis-mcp-integration/: SKILL.md
plugin/skills/schutzgebiete-analyse/: SKILL.md
plugin/skills/workflow-authoring/: SKILL.md
src/gis_utils/: __init__.py  alkis.py  alkis_profiles.yaml  atkis.py  catalog.py  dxf.py  geometry.py  grass.py  md_table.py  operations.py  osm.py  qgis_bridge.py  recipes.py  reporting.py  runner.py  templates.py  wfs.py  wms.py  wms_to_shape.py
src/gis_utils/cad/: __init__.py  annotate.py  colors.py  emit.py  legend.py  styles.py  viewport.py
src/gis_utils/dxf/: __init__.py  convert.py  extract.py  map_od.py
src/gis_utils/sources/: alkis_wohngebaeude.yaml  mv_alkis.yaml  mv_atkis.yaml  mv_bodenschaetzung.yaml  mv_moore.yaml  ni_atkis.yaml  ni_boris.yaml  ni_dtk50.yaml  osm_wohngebaeude.yaml  sh_alkis.yaml  sh_kataster.yaml  sh_uwat.yaml
src/gis_utils/templates/: __init__.py  apply_qml_style.py  buffer_zones.py  clip_to_flurstuecke.py  concentric_point_buffers.py  distance_lines_to_nearest.py  dxf_extract_layers.py  dxf_lines_to_polygon.py  dxf_verification.py  layout_from_qpt.py  (+2 more)
src/pbs_gis/: __init__.py  alkis.py  atkis.py  catalog.py  georef.py  manifest.py  maps.py  operations.py  osm.py  qgis_bridge.py  qgis_catalog.py  recipes.py  reporting.py  runner.py  wfs.py  wms.py
tests/: test_atkis_filter_schema_drift.py  test_cad_annotate.py  test_cad_emit.py  test_cad_styles.py  test_manifest.py  test_operations.py  test_runner.py  test_templates_cad.py
tests/fixtures/: cad_styles_georgendorf.yaml
(+39 files in other folders)
