[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-utils"
version = "0.2.0"
description = "GIS utilities: markdown tables, DXF helpers, and Map Object Data (OD)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "ezdxf>=1.0",
    "geopandas",
    "rasterio",
    "requests",
    "numpy",
    "shapely",
    "Pillow",
    "scipy",
    "scikit-image",
]

[project.urls]
Repository = "https://github.com/Gunther-Schulz/gis_utils"

[tool.setuptools.packages.find]
where = ["src"]
