[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-utils"
version = "0.3.0"
description = "GIS utilities: DXF extraction, geometry operations, area reporting, WMS vectorization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "ezdxf>=1.0",
    "geopandas",
    "rasterio",
    "requests",
    "numpy",
    "shapely",
    "Pillow",
    "scipy",
    "scikit-image",
    "pyyaml>=6.0",
]

[project.scripts]
gis-workflow = "gis_utils.runner:main"

[project.urls]
Repository = "https://github.com/Gunther-Schulz/gis_utils"

[tool.setuptools.packages.find]
where = ["src"]
